[package]
name = "hpke_spec"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hpke_spec"
crate-type = ["cdylib"]

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib" }
hpke = { git = "https://github.com/cryspen/hpke-spec" }
hpke_aead = { git = "https://github.com/cryspen/hpke-spec" }
hpke_errors = { git = "https://github.com/cryspen/hpke-spec" }
hpke_kdf = { git = "https://github.com/cryspen/hpke-spec" }
hpke_kem = { git = "https://github.com/cryspen/hpke-spec" }
pyo3 = { version = "0.16.5", features = ["extension-module"] }
rand = { version =  "0.8" }
