[package]
name = "hybrid_pke"
version = "0.2.1-dev0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hybrid_pke"
crate-type = ["cdylib"]

[dependencies]
hpke-rs = { version = "0.1.0", features = ["hazmat"] }
hpke-rs-crypto = { version = "0.1.1" }
hpke-rs-rust-crypto = { version = "0.1.1" }
pyo3 = { version = "0.16.5", features = ["extension-module"] }
rand = { version =  "0.8" }
