[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "hpke_spec"
description = "The Hybrid Public Key Encryption (HPKE) standard in Python"
version = "0.1.0-rc.1"  # NOTE: auto-updated during release
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
]
urls = {repository = "https://github.com/capeprivacy/py-hpke-spec"}
