[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "hybrid_pke"
description = "The Hybrid Public Key Encryption (HPKE) standard in Python"
version = "1.0.2-dev0"  # NOTE: auto-updated during release
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
]
urls = {repository = "https://github.com/capeprivacy/hybrid-pke"}
